cli/tests/testdata/check/broadcast_channel.ts
const channel = new BroadcastChannel("foo");
